--- a/views/post.ejs
+++ b/views/post.ejs
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
             <label>Image</label>
-            <% if (post.image) { %>
+            <% if (post.image.data && post.image.data.length > 0) { %>
                 <img src="<%= image %>" style="height: 200px; width: 200px" />
             <% } %>
             <input type="file" class="form-control" name="image">
