--- a/views/post_view.ejs
+++ b/views/post_view.ejs
@@ -12,32 +12,22 @@
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Edit Post</h1>
+    <h1><span class="fa fa-sign-in"></span> <%= post.title %></h1>
 
     <% if (typeof message !== 'undefined' && message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
 
-    <form action="/post/<%= post.id %>" method="post" enctype="multipart/form-data">
 
         <div class="form-group">
-            <label>Title:</label>
-            <input type="text" class="form-control" name="title" value="<%= post.title %>">
+            <%= post.content %>
         </div>
         <div class="form-group">
-            <label>Content:</label>
-            <input type="text" class="form-control" name="content" value="<%= post.content %>">
-        </div>
-        <div class="form-group">
-            <label>Image:</label><br>
             <% if (post.image && post.image.data && post.image.data.length > 0) { %>
                 <img src="<%= image %>" style="height: 250px; width: 250px" />
             <% } %>
-            <input type="file" class="form-control" name="image">
         </div>
-        
-        <button type="submit" class="btn btn-warning btn-lg">Save Post</button>
-    </form>
+
 
 </div>
 </div>
