--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -44,7 +44,7 @@
                     <% if(post.modifiedDate) { %>
                         [modified at: <%= post.modifiedDate.format("mm/dd/yyyy hh:MM:ss")%>]<br>
                     <% } %>
-                    <a href="/post/<%= post.id%>?verb=edit">[EDIT]</a><br>
+                    <a href="/post/<%= post.id%>?verb=edit">[EDIT]</a>&nbsp; | &nbsp;<a href="/post/<%= post.id%>?verb=delete">[DELETE]</a><br>
                     <br>
                 <% } %>
             </p>
