--- a/views/post_view.ejs
+++ b/views/post_view.ejs
@@ -13,10 +13,13 @@
 <div class="col-sm-6 col-sm-offset-3">
 
     <h1><span class="fa fa-sign-in"></span> <%= post.title %></h1>
+    <a href="/logout" class="btn btn-default btn-sm">Logout</a>
 
     <% if (typeof message !== 'undefined' && message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
+
+    <hr>
 
 
         <div class="form-group">
@@ -28,8 +31,29 @@
             <% } %>
         </div>
 
+        <div class="form-group">
+            <% if (typeof user !== 'undefined') { %>
+                <form action="/post/<%= post.id %>/comment" method="post">
+                    <label>Comment:</label><br>
+                    <input type="text" class="form-control" name="comment">
+                    <button type="submit" class="btn btn-warning btn-lg">Submit</button>
+                </form>
+            <% } %>
+        </div>
+
+        <ht>
+
+        <%= post.comments.length %> Comments: <br>
+        <div class="form-group">
+            <% for (var i=0; i<post.comments.length; ++i) { var comment = post.comments[i]; %>
+                <a href=""><%= comment.byWho%></a> commented at <%= comment.atWhen.format("mm/dd/yyyy hh:MM:ss") %>:<br>
+                <%= comment.content%><br>
+            <% } %>
+        </div>
 
 </div>
 </div>
+
+
 </body>
 </html>
